hphp/test/slow/readonly/deep_prop.php.expectf
Fatal error: check readonlyness fails in %s on line 13
